GT-4: added rules tests and minor fixes
(cherry picked from commit b2dcb94dad3d17c9121743f8d946520b83154d5a)